[tool.poetry]
name = "teste-studiosol"
version = "0.1.0"
description = ""
authors = ["Henrique Amaral <henriqueamaralreis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
graphene = "^3.0"
graphql-server = "3.0.0b4"


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"
Faker = "^13.7.0"
pylint = "^2.13.8"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"